--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -11,5 +11,6 @@
  @import "_limpieza.de.tanques.scss";
  @import "_fumigacion.scss";
  @import "_commons.scss";
- @import"_imagenes.scss"
+ @import"_imagenes.scss";
+ @import"_pagina_error.scss"
  
