--- a/scss/_control-de-plagas.scss
+++ b/scss/_control-de-plagas.scss
@@ -45,7 +45,8 @@
        font-size: 30px;
        padding: 20px;
        color: white;
-       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+       font-family: 'Times New Roman', Times, serif;
+       text-shadow: 1px 1px black;
     }
 
 }
