--- a/scss/_imagenes.scss
+++ b/scss/_imagenes.scss
@@ -21,9 +21,10 @@
     margin-left: 30px;
 }
 .img_fumigacion{
-  width: 90%;
+  width: 80%;
   height: 250px;
-  margin-left: 30px;
+  margin-left: 60px;
+  margin-top: 30px;
    box-shadow: 5px 5px 20px rgb(5, 5, 5);
 }
 
