--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -120,7 +120,8 @@ nav {
 
 .container-plaga {
   margin: 150px 50px;
-  text-align: center; }
+  text-align: center;
+  font-size: 15px; }
 
 .titulo_principal_plagas {
   color: #050505;
@@ -128,13 +129,13 @@ nav {
   .titulo_principal_plagas .parrafo_principal_plagas {
     padding: 20px;
     color: black;
-    font-family: Verdana, Geneva, Tahoma, sans-serif; }
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px; }
 
 .parrafo_plagas {
-  color: black;
-  padding: 20px;
-  font-size: 17px;
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  color: black; }
 
 .titulo_plagas {
   color: seagreen; }
@@ -152,7 +153,8 @@ nav {
     font-size: 30px;
     padding: 20px;
     color: white;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
     text-shadow: 1px 1px black; }
 
 .card-title {
@@ -323,11 +325,13 @@ nav {
 .parrafo_tanques {
   font-family: Arial, Helvetica, sans-serif;
   color: black;
-  font-size: 16px;
+  font-size: 15px;
   padding: 10px; }
 
 .container_fumigacion {
-  margin-top: 100px; }
+  margin-top: 100px;
+  background-color: rgba(0, 0, 0, 0.087);
+  font-family: Arial, Helvetica, sans-serif; }
 
 .titulo_fumigacion {
   text-align: center;
@@ -341,13 +345,17 @@ nav {
   text-align: center; }
 
 .parrafo_fumigacion {
-  color: black; }
+  color: black;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px; }
 
 .container_empresas {
   margin: 50px;
   width: auto;
   background-color: rgba(200, 191, 191, 0.261);
-  border-radius: 20%; }
+  border-radius: 20%;
+  background-color: honeydew; }
 
 .logo_empresas {
   width: 100px;
@@ -386,9 +394,10 @@ p {
   margin-left: 30px; }
 
 .img_fumigacion {
-  width: 90%;
+  width: 80%;
   height: 250px;
-  margin-left: 30px;
+  margin-left: 60px;
+  margin-top: 30px;
   box-shadow: 5px 5px 20px #050505; }
 
 .img_tanques {
