--- a/scss/_control-de-plagas.scss
+++ b/scss/_control-de-plagas.scss
@@ -3,6 +3,7 @@
 .container-plaga{
     margin: 150px 50px;
     text-align: center;
+    font-size: 15px;
     
 }
 
@@ -13,17 +14,15 @@
     .parrafo_principal_plagas{
     padding: 20px;
     color: black;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
 }
 }
 
 .parrafo_plagas{
-    color: black;
-    padding: 20px;
-    font-size: 17px;
     font-family: Arial, Helvetica, sans-serif;
-
+   font-size: 15px ;
+   color: black;
 }
 .titulo_plagas{
     color: seagreen;
@@ -45,7 +44,8 @@
        font-size: 30px;
        padding: 20px;
        color: white;
-       font-family: 'Times New Roman', Times, serif;
+       font-family: Arial, Helvetica, sans-serif;
+       font-size: 20px;
        text-shadow: 1px 1px black;
     }
 
