--- a/scss/_imagenes.scss
+++ b/scss/_imagenes.scss
@@ -25,7 +25,8 @@
   height: 250px;
   margin-left: 60px;
   margin-top: 30px;
-   box-shadow: 5px 5px 20px rgb(5, 5, 5);
+  margin-bottom: 50px;
+ box-shadow: 5px 5px 20px rgb(5, 5, 5);
 }
 
 .img_tanques{
