--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -398,6 +398,7 @@ p {
   height: 250px;
   margin-left: 60px;
   margin-top: 30px;
+  margin-bottom: 50px;
   box-shadow: 5px 5px 20px #050505; }
 
 .img_tanques {
